# NewTv

./: .gitattributes  .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: ios.yml
.local_plugins/media_kit_libs_windows_video/windows/: CMakeLists.txt
assets/nodejs-project/: package-lock.json
assets/nodejs-project/src/: main.js
assets/nodejs-project/src/util/: req.js
assets/nodejs-runtime/: version.json
ios/Runner/: AppDelegate.swift  BackgroundAudio.swift  Info.plist  NodeJSBridge.swift  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Runner/Assets.xcassets/LaunchImage.imageset/: Contents.json
ios/Runner/Base.lproj/: LaunchScreen.storyboard
ios/scripts/: add_nodemobile.rb
lib/: app.dart  main.dart
lib/common/: constants.dart  theme.dart
lib/models/: app_config.dart  cache_store.dart  live_models.dart  movie.dart  movie_sort.dart  player_engine.dart  source_bean.dart  vod_info.dart
lib/pages/detail/: controller.dart  episode_list.dart  view.dart
lib/pages/dlna/: view.dart
lib/pages/favorites/: controller.dart  view.dart
lib/pages/history/: controller.dart  view.dart
lib/pages/home/: controller.dart  view.dart
lib/pages/live/: controller.dart  view.dart
lib/pages/search/: controller.dart  view.dart
lib/pages/settings/: controller.dart  view.dart
lib/pages/setup/: view.dart
lib/pages/webview/: view.dart
lib/router/: app_pages.dart
lib/services/: api_config.dart  app_log.dart  app_state.dart  background_service.dart  network_manager.dart  nodejs_manager.dart  nodejs_platform.dart  nodejs_platform_android.dart  nodejs_platform_ios.dart  nodejs_platform_windows.dart  player_fullscreen_controller.dart  source_service.dart  spider_service.dart
lib/widgets/: common_widgets.dart  video_player.dart  video_player_pip.dart  vod_card.dart  window_fullscreen.dart
tools/: inspect_zip.ps1  inspect_zip2.ps1  rebuild_zip.ps1  rewrite_zip.ps1
tools/installer/: Installer.cs
windows/: CMakeLists.txt
windows/packaging/exe/: make_config.yaml
